crates/stef-parser/tests/snapshots/parser__parse@import_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/import_basic.stef
---
Schema {
    definitions: [
        Import(
            Import {
                segments: [
                    "other",
                    "schema",
                ],
                element: Some(
                    Name {
                        value: "Sample",
                        span: Span {
                            start: 19,
                            end: 25,
                        },
                    },
                ),
            },
        ),
        Import(
            Import {
                segments: [
                    "second",
                    "submodule",
                ],
                element: None,
            },
        ),
    ],
}
