crates/stef-parser/tests/snapshots/parser__parse@optional_ids.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "struct SampleNamed {\n    field1: u32,\n    field2: u32 @100,\n    field3: u32,\n}\n\nstruct SampleUnnamed(u32, u32 @100, u32)\n\nenum SampleEnum {\n    Named {\n        field1: u32,\n        field2: u32 @100,\n        field3: u32,\n    },\n    Unit @50,\n    Unnamed(u32, u32 @100, u32),\n}"
input_file: crates/stef-parser/tests/inputs/optional_ids.stef
---
Schema {
    path: Some(
        "optional_ids.stef",
    ),
    source: "struct SampleNamed {\n    field1: u32,\n    field2: u32 @100,\n    field3: u32,\n}\n\nstruct SampleUnnamed(u32, u32 @100, u32)\n\nenum SampleEnum {\n    Named {\n        field1: u32,\n        field2: u32 @100,\n        field3: u32,\n    },\n    Unit @50,\n    Unnamed(u32, u32 @100, u32),\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleNamed",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field1",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field2",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 100,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field3",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                        },
                    ],
                ),
            },
        ),
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleUnnamed",
                },
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    [
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                        },
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 100,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                        },
                    ],
                ),
            },
        ),
        Enum(
            Enum {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleEnum",
                },
                generics: Generics(
                    [],
                ),
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Named",
                        },
                        fields: Named(
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                    },
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field2",
                                    },
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 100,
                                        },
                                    ),
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field3",
                                    },
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                },
                            ],
                        ),
                        id: None,
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Unit",
                        },
                        fields: Unit,
                        id: Some(
                            Id {
                                value: 50,
                            },
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Unnamed",
                        },
                        fields: Unnamed(
                            [
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 100,
                                        },
                                    ),
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                },
                            ],
                        ),
                        id: None,
                    },
                ],
            },
        ),
    ],
}
