crates/stef-parser/tests/snapshots/parser__parse@schema-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/schema-basic.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Basic struct.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "SampleStruct",
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: "a",
                            ty: U32,
                            id: Id(
                                1,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: "b",
                            ty: Bool,
                            id: Id(
                                2,
                            ),
                        },
                    ],
                ),
            },
        ),
        Enum(
            Enum {
                comment: Comment(
                    [
                        "Sample enum.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "SampleEnum",
                generics: Generics(
                    [],
                ),
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: "One",
                        fields: Unit,
                        id: Id(
                            1,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: "Two",
                        fields: Unnamed(
                            [
                                UnnamedField {
                                    ty: U32,
                                    id: Id(
                                        1,
                                    ),
                                },
                                UnnamedField {
                                    ty: U64,
                                    id: Id(
                                        2,
                                    ),
                                },
                            ],
                        ),
                        id: Id(
                            2,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: "Three",
                        fields: Named(
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: "field1",
                                    ty: U32,
                                    id: Id(
                                        1,
                                    ),
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: "field2",
                                    ty: Bool,
                                    id: Id(
                                        2,
                                    ),
                                },
                            ],
                        ),
                        id: Id(
                            3,
                        ),
                    },
                ],
            },
        ),
    ],
}
