crates/stef-parser/tests/snapshots/parser__parse@schema_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/stef-parser/tests/inputs/schema_basic.stef
---
Schema {
    path: Some(
        "schema_basic.stef",
    ),
    source: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Basic struct.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleStruct",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: Id {
                                value: 1,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "b",
                            },
                            ty: Type {
                                value: Bool,
                            },
                            id: Id {
                                value: 2,
                            },
                        },
                    ],
                ),
            },
        ),
        Enum(
            Enum {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample enum.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "SampleEnum",
                },
                generics: Generics(
                    [],
                ),
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "One",
                        },
                        fields: Unit,
                        id: Id {
                            value: 1,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Two",
                        },
                        fields: Unnamed(
                            [
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Id {
                                        value: 1,
                                    },
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U64,
                                    },
                                    id: Id {
                                        value: 2,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 2,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Three",
                        },
                        fields: Named(
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                    },
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Id {
                                        value: 1,
                                    },
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field2",
                                    },
                                    ty: Type {
                                        value: Bool,
                                    },
                                    id: Id {
                                        value: 2,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 3,
                        },
                    },
                ],
            },
        ),
    ],
}
