crates/stef-parser/tests/snapshots/parser__parse@struct-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-basic.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Basic struct.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                                span: Span {
                                    start: 38,
                                    end: 39,
                                },
                            },
                            ty: U32,
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 45,
                                    end: 47,
                                },
                            },
                            span: Span {
                                start: 38,
                                end: 47,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [
                                    "Second field",
                                ],
                            ),
                            name: Name {
                                value: "b",
                                span: Span {
                                    start: 74,
                                    end: 75,
                                },
                            },
                            ty: Bool,
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 82,
                                    end: 84,
                                },
                            },
                            span: Span {
                                start: 70,
                                end: 84,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
