crates/stef-parser/tests/snapshots/parser__parse@struct-generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-generics.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Generic key-value pair.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "KeyValue",
                generics: Generics(
                    [
                        "K",
                        "V",
                    ],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "key",
                                span: Span {
                                    start: 56,
                                    end: 59,
                                },
                            },
                            ty: External(
                                ExternalType {
                                    path: [],
                                    name: "K",
                                    generics: [],
                                },
                            ),
                            id: Id {
                                value: 1,
                                span: Span {
                                    start: 63,
                                    end: 65,
                                },
                            },
                            span: Span {
                                start: 56,
                                end: 65,
                            },
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "value",
                                span: Span {
                                    start: 71,
                                    end: 76,
                                },
                            },
                            ty: External(
                                ExternalType {
                                    path: [],
                                    name: "V",
                                    generics: [],
                                },
                            ),
                            id: Id {
                                value: 2,
                                span: Span {
                                    start: 80,
                                    end: 82,
                                },
                            },
                            span: Span {
                                start: 71,
                                end: 82,
                            },
                        },
                    ],
                ),
            },
        ),
    ],
}
