crates/stef-parser/tests/snapshots/parser__parse@struct-many-ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-many-ws.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        "Some comment",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "Sample",
                generics: Generics(
                    [
                        "A",
                        "B",
                    ],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: "a",
                            ty: U32,
                            id: Id(
                                1,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: "b",
                            ty: Bool,
                            id: Id(
                                2,
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
